// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test snapshots check if App component renders correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="bg-gradient-to-r from-sky-900 to-zinc-800 min-h-screen"
      >
        <nav
          class="md:flex justify-between items-center md:mx-5 lg:w-4/5 lg:mx-auto"
        >
          <h1
            class="text-rose-500 text-3xl text-center py-10 font-bold"
            style="text-shadow: 1px 1px 1px rgba(206,206,206,0.7);"
          >
            Math Magicians
          </h1>
          <ul
            class="flex justify-around md:gap-x-5"
          >
            <li>
              <a
                class="activeLink  hover:text-rose-400 font-semibold p-2"
                href="/"
              >
                Home
              </a>
            </li>
            <li>
              <a
                class="text-rose-500  hover:text-rose-400 font-semibold p-2"
                href="/calculator"
              >
                Calculator
              </a>
            </li>
            <li>
              <a
                class="text-rose-500  hover:text-rose-400 font-semibold p-2"
                href="/quote"
              >
                Quote
              </a>
            </li>
          </ul>
        </nav>
        <div
          class="p-5 lg:w-4/5 lg:mx-auto lg:p-0 lg:mt-10"
        >
          <h1
            class="text-white text-2xl font-semibold my-5"
          >
            Welcome to our page!
          </h1>
          <p
            class="text-sky-100 mb-5"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa id neque aliquam vestibulum. Imperdiet sed euismod nisi porta lorem mollis aliquam ut porttitor. Mi bibendum neque egestas congue quisque egestas diam in. Tellus molestie nunc non blandit massa enim. Sed turpis tincidunt id aliquet risus. Netus et malesuada fames ac turpis. Libero nunc consequat interdum varius sit amet mattis. Dictumst vestibulum rhoncus est pellentesque elit ullamcorper dignissim. In est ante in nibh mauris. Arcu cursus euismod quis viverra.
          </p>
          <p
            class="text-sky-100 mb-5"
          >
            Varius vel pharetra vel turpis nunc eget lorem dolor. Posuere ac ut consequat semper viverra nam libero justo. Quam id leo in vitae turpis massa. Risus feugiat in ante metus dictum at tempor commodo ullamcorper. Aliquet risus feugiat in ante metus dictum at. Lectus nulla at volutpat diam ut venenatis tellus. Phasellus egestas tellus rutrum tellus.
          </p>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="bg-gradient-to-r from-sky-900 to-zinc-800 min-h-screen"
    >
      <nav
        class="md:flex justify-between items-center md:mx-5 lg:w-4/5 lg:mx-auto"
      >
        <h1
          class="text-rose-500 text-3xl text-center py-10 font-bold"
          style="text-shadow: 1px 1px 1px rgba(206,206,206,0.7);"
        >
          Math Magicians
        </h1>
        <ul
          class="flex justify-around md:gap-x-5"
        >
          <li>
            <a
              class="activeLink  hover:text-rose-400 font-semibold p-2"
              href="/"
            >
              Home
            </a>
          </li>
          <li>
            <a
              class="text-rose-500  hover:text-rose-400 font-semibold p-2"
              href="/calculator"
            >
              Calculator
            </a>
          </li>
          <li>
            <a
              class="text-rose-500  hover:text-rose-400 font-semibold p-2"
              href="/quote"
            >
              Quote
            </a>
          </li>
        </ul>
      </nav>
      <div
        class="p-5 lg:w-4/5 lg:mx-auto lg:p-0 lg:mt-10"
      >
        <h1
          class="text-white text-2xl font-semibold my-5"
        >
          Welcome to our page!
        </h1>
        <p
          class="text-sky-100 mb-5"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa id neque aliquam vestibulum. Imperdiet sed euismod nisi porta lorem mollis aliquam ut porttitor. Mi bibendum neque egestas congue quisque egestas diam in. Tellus molestie nunc non blandit massa enim. Sed turpis tincidunt id aliquet risus. Netus et malesuada fames ac turpis. Libero nunc consequat interdum varius sit amet mattis. Dictumst vestibulum rhoncus est pellentesque elit ullamcorper dignissim. In est ante in nibh mauris. Arcu cursus euismod quis viverra.
        </p>
        <p
          class="text-sky-100 mb-5"
        >
          Varius vel pharetra vel turpis nunc eget lorem dolor. Posuere ac ut consequat semper viverra nam libero justo. Quam id leo in vitae turpis massa. Risus feugiat in ante metus dictum at tempor commodo ullamcorper. Aliquet risus feugiat in ante metus dictum at. Lectus nulla at volutpat diam ut venenatis tellus. Phasellus egestas tellus rutrum tellus.
        </p>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Test snapshots check if Button component renders correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <li
        aria-hidden="true"
        class=""
      />
    </div>
  </body>,
  "container": <div>
    <li
      aria-hidden="true"
      class=""
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Test snapshots check if Button component renders correctly 2`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <li
        aria-hidden="true"
        class=""
      />
    </div>
  </body>,
  "container": <div>
    <li
      aria-hidden="true"
      class=""
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Test snapshots check if Calculator component renders correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <ul
        class="calculator"
      >
        <li
          aria-hidden="true"
          class="operations"
        >
          0
        </li>
        <li
          aria-hidden="true"
          class=""
        >
          AC
        </li>
        <li
          aria-hidden="true"
          class=""
        >
          +/-
        </li>
        <li
          aria-hidden="true"
          class=""
        >
          %
        </li>
        <li
          aria-hidden="true"
          class=""
        >
          ÷
        </li>
        <li
          aria-hidden="true"
          class=""
        >
          7
        </li>
        <li
          aria-hidden="true"
          class=""
        >
          8
        </li>
        <li
          aria-hidden="true"
          class=""
        >
          9
        </li>
        <li
          aria-hidden="true"
          class="operator"
        >
          x
        </li>
        <li
          aria-hidden="true"
          class=""
        >
          4
        </li>
        <li
          aria-hidden="true"
          class=""
        >
          5
        </li>
        <li
          aria-hidden="true"
          class=""
        >
          6
        </li>
        <li
          aria-hidden="true"
          class="operator"
        >
          -
        </li>
        <li
          aria-hidden="true"
          class=""
        >
          1
        </li>
        <li
          aria-hidden="true"
          class=""
        >
          2
        </li>
        <li
          aria-hidden="true"
          class=""
        >
          3
        </li>
        <li
          aria-hidden="true"
          class="operator"
        >
          +
        </li>
        <li
          aria-hidden="true"
          class="zero"
        >
          0
        </li>
        <li
          aria-hidden="true"
          class=""
        >
          .
        </li>
        <li
          aria-hidden="true"
          class="operator"
        >
          =
        </li>
      </ul>
    </div>
  </body>,
  "container": <div>
    <ul
      class="calculator"
    >
      <li
        aria-hidden="true"
        class="operations"
      >
        0
      </li>
      <li
        aria-hidden="true"
        class=""
      >
        AC
      </li>
      <li
        aria-hidden="true"
        class=""
      >
        +/-
      </li>
      <li
        aria-hidden="true"
        class=""
      >
        %
      </li>
      <li
        aria-hidden="true"
        class=""
      >
        ÷
      </li>
      <li
        aria-hidden="true"
        class=""
      >
        7
      </li>
      <li
        aria-hidden="true"
        class=""
      >
        8
      </li>
      <li
        aria-hidden="true"
        class=""
      >
        9
      </li>
      <li
        aria-hidden="true"
        class="operator"
      >
        x
      </li>
      <li
        aria-hidden="true"
        class=""
      >
        4
      </li>
      <li
        aria-hidden="true"
        class=""
      >
        5
      </li>
      <li
        aria-hidden="true"
        class=""
      >
        6
      </li>
      <li
        aria-hidden="true"
        class="operator"
      >
        -
      </li>
      <li
        aria-hidden="true"
        class=""
      >
        1
      </li>
      <li
        aria-hidden="true"
        class=""
      >
        2
      </li>
      <li
        aria-hidden="true"
        class=""
      >
        3
      </li>
      <li
        aria-hidden="true"
        class="operator"
      >
        +
      </li>
      <li
        aria-hidden="true"
        class="zero"
      >
        0
      </li>
      <li
        aria-hidden="true"
        class=""
      >
        .
      </li>
      <li
        aria-hidden="true"
        class="operator"
      >
        =
      </li>
    </ul>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Test snapshots check if Calculator component renders correctly 2`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <ul
        class="calculator"
      >
        <li
          aria-hidden="true"
          class="operations"
        >
          0
        </li>
        <li
          aria-hidden="true"
          class=""
        >
          AC
        </li>
        <li
          aria-hidden="true"
          class=""
        >
          +/-
        </li>
        <li
          aria-hidden="true"
          class=""
        >
          %
        </li>
        <li
          aria-hidden="true"
          class=""
        >
          ÷
        </li>
        <li
          aria-hidden="true"
          class=""
        >
          7
        </li>
        <li
          aria-hidden="true"
          class=""
        >
          8
        </li>
        <li
          aria-hidden="true"
          class=""
        >
          9
        </li>
        <li
          aria-hidden="true"
          class="operator"
        >
          x
        </li>
        <li
          aria-hidden="true"
          class=""
        >
          4
        </li>
        <li
          aria-hidden="true"
          class=""
        >
          5
        </li>
        <li
          aria-hidden="true"
          class=""
        >
          6
        </li>
        <li
          aria-hidden="true"
          class="operator"
        >
          -
        </li>
        <li
          aria-hidden="true"
          class=""
        >
          1
        </li>
        <li
          aria-hidden="true"
          class=""
        >
          2
        </li>
        <li
          aria-hidden="true"
          class=""
        >
          3
        </li>
        <li
          aria-hidden="true"
          class="operator"
        >
          +
        </li>
        <li
          aria-hidden="true"
          class="zero"
        >
          0
        </li>
        <li
          aria-hidden="true"
          class=""
        >
          .
        </li>
        <li
          aria-hidden="true"
          class="operator"
        >
          =
        </li>
      </ul>
    </div>
  </body>,
  "container": <div>
    <ul
      class="calculator"
    >
      <li
        aria-hidden="true"
        class="operations"
      >
        0
      </li>
      <li
        aria-hidden="true"
        class=""
      >
        AC
      </li>
      <li
        aria-hidden="true"
        class=""
      >
        +/-
      </li>
      <li
        aria-hidden="true"
        class=""
      >
        %
      </li>
      <li
        aria-hidden="true"
        class=""
      >
        ÷
      </li>
      <li
        aria-hidden="true"
        class=""
      >
        7
      </li>
      <li
        aria-hidden="true"
        class=""
      >
        8
      </li>
      <li
        aria-hidden="true"
        class=""
      >
        9
      </li>
      <li
        aria-hidden="true"
        class="operator"
      >
        x
      </li>
      <li
        aria-hidden="true"
        class=""
      >
        4
      </li>
      <li
        aria-hidden="true"
        class=""
      >
        5
      </li>
      <li
        aria-hidden="true"
        class=""
      >
        6
      </li>
      <li
        aria-hidden="true"
        class="operator"
      >
        -
      </li>
      <li
        aria-hidden="true"
        class=""
      >
        1
      </li>
      <li
        aria-hidden="true"
        class=""
      >
        2
      </li>
      <li
        aria-hidden="true"
        class=""
      >
        3
      </li>
      <li
        aria-hidden="true"
        class="operator"
      >
        +
      </li>
      <li
        aria-hidden="true"
        class="zero"
      >
        0
      </li>
      <li
        aria-hidden="true"
        class=""
      >
        .
      </li>
      <li
        aria-hidden="true"
        class="operator"
      >
        =
      </li>
    </ul>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Test snapshots check if Calculator page component renders correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <li
        aria-hidden="true"
        class=""
      />
    </div>
  </body>,
  "container": <div>
    <li
      aria-hidden="true"
      class=""
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Test snapshots check if Calculator page renders correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="p-5 md:flex lg:w-4/5 lg:mx-auto lg:p-0 lg:mt-24"
      >
        <h1
          class="text-white text-2xl font-semibold my-5 md:basis-1/2"
        >
          Let's do some math!
        </h1>
        <section
          class="text-white font-bold md:basis-1/2 md:grow-0"
        >
          <ul
            class="calculator"
          >
            <li
              aria-hidden="true"
              class="operations"
            >
              0
            </li>
            <li
              aria-hidden="true"
              class=""
            >
              AC
            </li>
            <li
              aria-hidden="true"
              class=""
            >
              +/-
            </li>
            <li
              aria-hidden="true"
              class=""
            >
              %
            </li>
            <li
              aria-hidden="true"
              class=""
            >
              ÷
            </li>
            <li
              aria-hidden="true"
              class=""
            >
              7
            </li>
            <li
              aria-hidden="true"
              class=""
            >
              8
            </li>
            <li
              aria-hidden="true"
              class=""
            >
              9
            </li>
            <li
              aria-hidden="true"
              class="operator"
            >
              x
            </li>
            <li
              aria-hidden="true"
              class=""
            >
              4
            </li>
            <li
              aria-hidden="true"
              class=""
            >
              5
            </li>
            <li
              aria-hidden="true"
              class=""
            >
              6
            </li>
            <li
              aria-hidden="true"
              class="operator"
            >
              -
            </li>
            <li
              aria-hidden="true"
              class=""
            >
              1
            </li>
            <li
              aria-hidden="true"
              class=""
            >
              2
            </li>
            <li
              aria-hidden="true"
              class=""
            >
              3
            </li>
            <li
              aria-hidden="true"
              class="operator"
            >
              +
            </li>
            <li
              aria-hidden="true"
              class="zero"
            >
              0
            </li>
            <li
              aria-hidden="true"
              class=""
            >
              .
            </li>
            <li
              aria-hidden="true"
              class="operator"
            >
              =
            </li>
          </ul>
        </section>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="p-5 md:flex lg:w-4/5 lg:mx-auto lg:p-0 lg:mt-24"
    >
      <h1
        class="text-white text-2xl font-semibold my-5 md:basis-1/2"
      >
        Let's do some math!
      </h1>
      <section
        class="text-white font-bold md:basis-1/2 md:grow-0"
      >
        <ul
          class="calculator"
        >
          <li
            aria-hidden="true"
            class="operations"
          >
            0
          </li>
          <li
            aria-hidden="true"
            class=""
          >
            AC
          </li>
          <li
            aria-hidden="true"
            class=""
          >
            +/-
          </li>
          <li
            aria-hidden="true"
            class=""
          >
            %
          </li>
          <li
            aria-hidden="true"
            class=""
          >
            ÷
          </li>
          <li
            aria-hidden="true"
            class=""
          >
            7
          </li>
          <li
            aria-hidden="true"
            class=""
          >
            8
          </li>
          <li
            aria-hidden="true"
            class=""
          >
            9
          </li>
          <li
            aria-hidden="true"
            class="operator"
          >
            x
          </li>
          <li
            aria-hidden="true"
            class=""
          >
            4
          </li>
          <li
            aria-hidden="true"
            class=""
          >
            5
          </li>
          <li
            aria-hidden="true"
            class=""
          >
            6
          </li>
          <li
            aria-hidden="true"
            class="operator"
          >
            -
          </li>
          <li
            aria-hidden="true"
            class=""
          >
            1
          </li>
          <li
            aria-hidden="true"
            class=""
          >
            2
          </li>
          <li
            aria-hidden="true"
            class=""
          >
            3
          </li>
          <li
            aria-hidden="true"
            class="operator"
          >
            +
          </li>
          <li
            aria-hidden="true"
            class="zero"
          >
            0
          </li>
          <li
            aria-hidden="true"
            class=""
          >
            .
          </li>
          <li
            aria-hidden="true"
            class="operator"
          >
            =
          </li>
        </ul>
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Test snapshots check if Calculator page renders correctly 2`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="p-5 md:flex lg:w-4/5 lg:mx-auto lg:p-0 lg:mt-24"
      >
        <h1
          class="text-white text-2xl font-semibold my-5 md:basis-1/2"
        >
          Let's do some math!
        </h1>
        <section
          class="text-white font-bold md:basis-1/2 md:grow-0"
        >
          <ul
            class="calculator"
          >
            <li
              aria-hidden="true"
              class="operations"
            >
              0
            </li>
            <li
              aria-hidden="true"
              class=""
            >
              AC
            </li>
            <li
              aria-hidden="true"
              class=""
            >
              +/-
            </li>
            <li
              aria-hidden="true"
              class=""
            >
              %
            </li>
            <li
              aria-hidden="true"
              class=""
            >
              ÷
            </li>
            <li
              aria-hidden="true"
              class=""
            >
              7
            </li>
            <li
              aria-hidden="true"
              class=""
            >
              8
            </li>
            <li
              aria-hidden="true"
              class=""
            >
              9
            </li>
            <li
              aria-hidden="true"
              class="operator"
            >
              x
            </li>
            <li
              aria-hidden="true"
              class=""
            >
              4
            </li>
            <li
              aria-hidden="true"
              class=""
            >
              5
            </li>
            <li
              aria-hidden="true"
              class=""
            >
              6
            </li>
            <li
              aria-hidden="true"
              class="operator"
            >
              -
            </li>
            <li
              aria-hidden="true"
              class=""
            >
              1
            </li>
            <li
              aria-hidden="true"
              class=""
            >
              2
            </li>
            <li
              aria-hidden="true"
              class=""
            >
              3
            </li>
            <li
              aria-hidden="true"
              class="operator"
            >
              +
            </li>
            <li
              aria-hidden="true"
              class="zero"
            >
              0
            </li>
            <li
              aria-hidden="true"
              class=""
            >
              .
            </li>
            <li
              aria-hidden="true"
              class="operator"
            >
              =
            </li>
          </ul>
        </section>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="p-5 md:flex lg:w-4/5 lg:mx-auto lg:p-0 lg:mt-24"
    >
      <h1
        class="text-white text-2xl font-semibold my-5 md:basis-1/2"
      >
        Let's do some math!
      </h1>
      <section
        class="text-white font-bold md:basis-1/2 md:grow-0"
      >
        <ul
          class="calculator"
        >
          <li
            aria-hidden="true"
            class="operations"
          >
            0
          </li>
          <li
            aria-hidden="true"
            class=""
          >
            AC
          </li>
          <li
            aria-hidden="true"
            class=""
          >
            +/-
          </li>
          <li
            aria-hidden="true"
            class=""
          >
            %
          </li>
          <li
            aria-hidden="true"
            class=""
          >
            ÷
          </li>
          <li
            aria-hidden="true"
            class=""
          >
            7
          </li>
          <li
            aria-hidden="true"
            class=""
          >
            8
          </li>
          <li
            aria-hidden="true"
            class=""
          >
            9
          </li>
          <li
            aria-hidden="true"
            class="operator"
          >
            x
          </li>
          <li
            aria-hidden="true"
            class=""
          >
            4
          </li>
          <li
            aria-hidden="true"
            class=""
          >
            5
          </li>
          <li
            aria-hidden="true"
            class=""
          >
            6
          </li>
          <li
            aria-hidden="true"
            class="operator"
          >
            -
          </li>
          <li
            aria-hidden="true"
            class=""
          >
            1
          </li>
          <li
            aria-hidden="true"
            class=""
          >
            2
          </li>
          <li
            aria-hidden="true"
            class=""
          >
            3
          </li>
          <li
            aria-hidden="true"
            class="operator"
          >
            +
          </li>
          <li
            aria-hidden="true"
            class="zero"
          >
            0
          </li>
          <li
            aria-hidden="true"
            class=""
          >
            .
          </li>
          <li
            aria-hidden="true"
            class="operator"
          >
            =
          </li>
        </ul>
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Test snapshots check if Calculator page renders correctly 3`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="p-5 md:flex lg:w-4/5 lg:mx-auto lg:p-0 lg:mt-24"
      >
        <h1
          class="text-white text-2xl font-semibold my-5 md:basis-1/2"
        >
          Let's do some math!
        </h1>
        <section
          class="text-white font-bold md:basis-1/2 md:grow-0"
        >
          <ul
            class="calculator"
          >
            <li
              aria-hidden="true"
              class="operations"
            >
              0
            </li>
            <li
              aria-hidden="true"
              class=""
            >
              AC
            </li>
            <li
              aria-hidden="true"
              class=""
            >
              +/-
            </li>
            <li
              aria-hidden="true"
              class=""
            >
              %
            </li>
            <li
              aria-hidden="true"
              class=""
            >
              ÷
            </li>
            <li
              aria-hidden="true"
              class=""
            >
              7
            </li>
            <li
              aria-hidden="true"
              class=""
            >
              8
            </li>
            <li
              aria-hidden="true"
              class=""
            >
              9
            </li>
            <li
              aria-hidden="true"
              class="operator"
            >
              x
            </li>
            <li
              aria-hidden="true"
              class=""
            >
              4
            </li>
            <li
              aria-hidden="true"
              class=""
            >
              5
            </li>
            <li
              aria-hidden="true"
              class=""
            >
              6
            </li>
            <li
              aria-hidden="true"
              class="operator"
            >
              -
            </li>
            <li
              aria-hidden="true"
              class=""
            >
              1
            </li>
            <li
              aria-hidden="true"
              class=""
            >
              2
            </li>
            <li
              aria-hidden="true"
              class=""
            >
              3
            </li>
            <li
              aria-hidden="true"
              class="operator"
            >
              +
            </li>
            <li
              aria-hidden="true"
              class="zero"
            >
              0
            </li>
            <li
              aria-hidden="true"
              class=""
            >
              .
            </li>
            <li
              aria-hidden="true"
              class="operator"
            >
              =
            </li>
          </ul>
        </section>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="p-5 md:flex lg:w-4/5 lg:mx-auto lg:p-0 lg:mt-24"
    >
      <h1
        class="text-white text-2xl font-semibold my-5 md:basis-1/2"
      >
        Let's do some math!
      </h1>
      <section
        class="text-white font-bold md:basis-1/2 md:grow-0"
      >
        <ul
          class="calculator"
        >
          <li
            aria-hidden="true"
            class="operations"
          >
            0
          </li>
          <li
            aria-hidden="true"
            class=""
          >
            AC
          </li>
          <li
            aria-hidden="true"
            class=""
          >
            +/-
          </li>
          <li
            aria-hidden="true"
            class=""
          >
            %
          </li>
          <li
            aria-hidden="true"
            class=""
          >
            ÷
          </li>
          <li
            aria-hidden="true"
            class=""
          >
            7
          </li>
          <li
            aria-hidden="true"
            class=""
          >
            8
          </li>
          <li
            aria-hidden="true"
            class=""
          >
            9
          </li>
          <li
            aria-hidden="true"
            class="operator"
          >
            x
          </li>
          <li
            aria-hidden="true"
            class=""
          >
            4
          </li>
          <li
            aria-hidden="true"
            class=""
          >
            5
          </li>
          <li
            aria-hidden="true"
            class=""
          >
            6
          </li>
          <li
            aria-hidden="true"
            class="operator"
          >
            -
          </li>
          <li
            aria-hidden="true"
            class=""
          >
            1
          </li>
          <li
            aria-hidden="true"
            class=""
          >
            2
          </li>
          <li
            aria-hidden="true"
            class=""
          >
            3
          </li>
          <li
            aria-hidden="true"
            class="operator"
          >
            +
          </li>
          <li
            aria-hidden="true"
            class="zero"
          >
            0
          </li>
          <li
            aria-hidden="true"
            class=""
          >
            .
          </li>
          <li
            aria-hidden="true"
            class="operator"
          >
            =
          </li>
        </ul>
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Test snapshots check if Home page renders correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="p-5 lg:w-4/5 lg:mx-auto lg:p-0 lg:mt-10"
      >
        <h1
          class="text-white text-2xl font-semibold my-5"
        >
          Welcome to our page!
        </h1>
        <p
          class="text-sky-100 mb-5"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa id neque aliquam vestibulum. Imperdiet sed euismod nisi porta lorem mollis aliquam ut porttitor. Mi bibendum neque egestas congue quisque egestas diam in. Tellus molestie nunc non blandit massa enim. Sed turpis tincidunt id aliquet risus. Netus et malesuada fames ac turpis. Libero nunc consequat interdum varius sit amet mattis. Dictumst vestibulum rhoncus est pellentesque elit ullamcorper dignissim. In est ante in nibh mauris. Arcu cursus euismod quis viverra.
        </p>
        <p
          class="text-sky-100 mb-5"
        >
          Varius vel pharetra vel turpis nunc eget lorem dolor. Posuere ac ut consequat semper viverra nam libero justo. Quam id leo in vitae turpis massa. Risus feugiat in ante metus dictum at tempor commodo ullamcorper. Aliquet risus feugiat in ante metus dictum at. Lectus nulla at volutpat diam ut venenatis tellus. Phasellus egestas tellus rutrum tellus.
        </p>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="p-5 lg:w-4/5 lg:mx-auto lg:p-0 lg:mt-10"
    >
      <h1
        class="text-white text-2xl font-semibold my-5"
      >
        Welcome to our page!
      </h1>
      <p
        class="text-sky-100 mb-5"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa id neque aliquam vestibulum. Imperdiet sed euismod nisi porta lorem mollis aliquam ut porttitor. Mi bibendum neque egestas congue quisque egestas diam in. Tellus molestie nunc non blandit massa enim. Sed turpis tincidunt id aliquet risus. Netus et malesuada fames ac turpis. Libero nunc consequat interdum varius sit amet mattis. Dictumst vestibulum rhoncus est pellentesque elit ullamcorper dignissim. In est ante in nibh mauris. Arcu cursus euismod quis viverra.
      </p>
      <p
        class="text-sky-100 mb-5"
      >
        Varius vel pharetra vel turpis nunc eget lorem dolor. Posuere ac ut consequat semper viverra nam libero justo. Quam id leo in vitae turpis massa. Risus feugiat in ante metus dictum at tempor commodo ullamcorper. Aliquet risus feugiat in ante metus dictum at. Lectus nulla at volutpat diam ut venenatis tellus. Phasellus egestas tellus rutrum tellus.
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Test snapshots check if Navbar component renders correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <nav
        class="md:flex justify-between items-center md:mx-5 lg:w-4/5 lg:mx-auto"
      >
        <h1
          class="text-rose-500 text-3xl text-center py-10 font-bold"
          style="text-shadow: 1px 1px 1px rgba(206,206,206,0.7);"
        >
          Math Magicians
        </h1>
        <ul
          class="flex justify-around md:gap-x-5"
        >
          <li>
            <a
              class="activeLink  hover:text-rose-400 font-semibold p-2"
              href="/"
            >
              Home
            </a>
          </li>
          <li>
            <a
              class="text-rose-500  hover:text-rose-400 font-semibold p-2"
              href="/calculator"
            >
              Calculator
            </a>
          </li>
          <li>
            <a
              class="text-rose-500  hover:text-rose-400 font-semibold p-2"
              href="/quote"
            >
              Quote
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </body>,
  "container": <div>
    <nav
      class="md:flex justify-between items-center md:mx-5 lg:w-4/5 lg:mx-auto"
    >
      <h1
        class="text-rose-500 text-3xl text-center py-10 font-bold"
        style="text-shadow: 1px 1px 1px rgba(206,206,206,0.7);"
      >
        Math Magicians
      </h1>
      <ul
        class="flex justify-around md:gap-x-5"
      >
        <li>
          <a
            class="activeLink  hover:text-rose-400 font-semibold p-2"
            href="/"
          >
            Home
          </a>
        </li>
        <li>
          <a
            class="text-rose-500  hover:text-rose-400 font-semibold p-2"
            href="/calculator"
          >
            Calculator
          </a>
        </li>
        <li>
          <a
            class="text-rose-500  hover:text-rose-400 font-semibold p-2"
            href="/quote"
          >
            Quote
          </a>
        </li>
      </ul>
    </nav>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Test snapshots check if Quote page renders correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="p-5 md:flex lg:w-4/5 lg:mx-auto lg:p-0 lg:mt-24"
      >
        <h1
          class="text-white text-2xl font-semibold my-5 md:basis-1/2"
        >
          Let's do some math!
        </h1>
        <section
          class="text-white font-bold md:basis-1/2 md:grow-0"
        >
          <ul
            class="calculator"
          >
            <li
              aria-hidden="true"
              class="operations"
            >
              0
            </li>
            <li
              aria-hidden="true"
              class=""
            >
              AC
            </li>
            <li
              aria-hidden="true"
              class=""
            >
              +/-
            </li>
            <li
              aria-hidden="true"
              class=""
            >
              %
            </li>
            <li
              aria-hidden="true"
              class=""
            >
              ÷
            </li>
            <li
              aria-hidden="true"
              class=""
            >
              7
            </li>
            <li
              aria-hidden="true"
              class=""
            >
              8
            </li>
            <li
              aria-hidden="true"
              class=""
            >
              9
            </li>
            <li
              aria-hidden="true"
              class="operator"
            >
              x
            </li>
            <li
              aria-hidden="true"
              class=""
            >
              4
            </li>
            <li
              aria-hidden="true"
              class=""
            >
              5
            </li>
            <li
              aria-hidden="true"
              class=""
            >
              6
            </li>
            <li
              aria-hidden="true"
              class="operator"
            >
              -
            </li>
            <li
              aria-hidden="true"
              class=""
            >
              1
            </li>
            <li
              aria-hidden="true"
              class=""
            >
              2
            </li>
            <li
              aria-hidden="true"
              class=""
            >
              3
            </li>
            <li
              aria-hidden="true"
              class="operator"
            >
              +
            </li>
            <li
              aria-hidden="true"
              class="zero"
            >
              0
            </li>
            <li
              aria-hidden="true"
              class=""
            >
              .
            </li>
            <li
              aria-hidden="true"
              class="operator"
            >
              =
            </li>
          </ul>
        </section>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="p-5 md:flex lg:w-4/5 lg:mx-auto lg:p-0 lg:mt-24"
    >
      <h1
        class="text-white text-2xl font-semibold my-5 md:basis-1/2"
      >
        Let's do some math!
      </h1>
      <section
        class="text-white font-bold md:basis-1/2 md:grow-0"
      >
        <ul
          class="calculator"
        >
          <li
            aria-hidden="true"
            class="operations"
          >
            0
          </li>
          <li
            aria-hidden="true"
            class=""
          >
            AC
          </li>
          <li
            aria-hidden="true"
            class=""
          >
            +/-
          </li>
          <li
            aria-hidden="true"
            class=""
          >
            %
          </li>
          <li
            aria-hidden="true"
            class=""
          >
            ÷
          </li>
          <li
            aria-hidden="true"
            class=""
          >
            7
          </li>
          <li
            aria-hidden="true"
            class=""
          >
            8
          </li>
          <li
            aria-hidden="true"
            class=""
          >
            9
          </li>
          <li
            aria-hidden="true"
            class="operator"
          >
            x
          </li>
          <li
            aria-hidden="true"
            class=""
          >
            4
          </li>
          <li
            aria-hidden="true"
            class=""
          >
            5
          </li>
          <li
            aria-hidden="true"
            class=""
          >
            6
          </li>
          <li
            aria-hidden="true"
            class="operator"
          >
            -
          </li>
          <li
            aria-hidden="true"
            class=""
          >
            1
          </li>
          <li
            aria-hidden="true"
            class=""
          >
            2
          </li>
          <li
            aria-hidden="true"
            class=""
          >
            3
          </li>
          <li
            aria-hidden="true"
            class="operator"
          >
            +
          </li>
          <li
            aria-hidden="true"
            class="zero"
          >
            0
          </li>
          <li
            aria-hidden="true"
            class=""
          >
            .
          </li>
          <li
            aria-hidden="true"
            class="operator"
          >
            =
          </li>
        </ul>
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
